Added watermark property for SizableTextBox (having it to inherit a WaterMarkedTextBox control instead of a TextBox only).

--- a/Development.Materia/Development.Materia.csproj
+++ b/Development.Materia/Development.Materia.csproj
@@ -82,9 +82,7 @@
     <Compile Include="Controls\RequiredFieldMarker.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\SizableTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Controls\SizableTextBox.cs" />
     <Compile Include="Controls\WaterMarkedTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
