Redefined SizableTextBox control.

--- a/Development.Materia/Development.Materia.csproj
+++ b/Development.Materia/Development.Materia.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Controls\RequiredFieldMarker.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\SizableTextBox.cs" />
+    <Compile Include="Controls\SizableTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\WaterMarkedTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
