--- a/Development.Materia/Development.Materia.csproj
+++ b/Development.Materia/Development.Materia.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Controls\WaterMarkedTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Examples\Example.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
