Commits as of 22-Aug-2013 03:12PM - Updated LastInsertIndCall's initial value and have it casted into signed integer. - Added UnitTest to Que.Execute method.

--- a/Development.Materia.UnitTest/Development.Materia.UnitTest.csproj
+++ b/Development.Materia.UnitTest/Development.Materia.UnitTest.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="QueryGeneratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueTest.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
