--- a/Development.Materia.UnitTest/Development.Materia.UnitTest.csproj
+++ b/Development.Materia.UnitTest/Development.Materia.UnitTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="QueryGeneratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueTest.cs" />
+    <Compile Include="DatabaseTest.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
